force-app/main/default/objects/ExactTargetAPIConfig__c.object
<CustomObject>
    <fields>
        <fullName>ClientId__c</fullName>
        <label>ClientId</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClientSecret__c</fullName>
        <label>ClientSecret</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Endpoint__c</fullName>
        <label>Endpoint</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <customSettingsType>List</customSettingsType>
    <description>Holds the information needed to access Marketing Cloud web services.</description>
    <label>ExactTargetAPIConfig</label>
</CustomObject>