force-app/main/default/objects/ExactTargetAPIConfig__c/fields/AccountId__c.field-meta.xml
<CustomField>
    <fullName>AccountId__c</fullName>
    <description>Marketing Cloud Account ID (Top level business unit)</description>
    <label>Account Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>